[package]
name = "jonfk_ca"
version = "0.1.0"
authors = ["Jonathan Fok Kan <jfokkan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-html = "0.2"
serde = "1.0"
serde_yaml = "0.8.11"
env_logger = "0.7.1"
chrono = "0.4"
anyhow = "1.0"
pulldown-cmark = "0.6.1"
structopt = "0.3.5"

rodin = { path = "../rodin" }